Add compatibility for Patchouli, prepare compatibility for JEI, REI, and Jade, and optimize collision boxes.